NEXT-20001 - Add plural snippets to rule builder operators

--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-creation-date/sw-condition-line-item-creation-date.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-creation-date/sw-condition-line-item-creation-date.html.twig
@@ -4,6 +4,7 @@
     {% block sw_condition_line_item_creation_date_operator %}
     <sw-condition-operator-select
         v-bind="{ operators, condition }"
+        :plural="matchesAll"
         :disabled="disabled"
     />
     {% endblock %}
