--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-release-date/sw-condition-line-item-release-date.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-release-date/sw-condition-line-item-release-date.html.twig
@@ -3,6 +3,7 @@
     {% block sw_condition_line_item_release_date_operator %}
     <sw-condition-operator-select
         v-bind="{ operators, condition }"
+        :plural="matchesAll"
         :disabled="disabled"
     />
     {% endblock %}
