--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -17,6 +17,7 @@
     {% block sw_condition_line_item_with_quantity_field_operator %}
     <sw-condition-operator-select
         v-bind="{ operators, condition }"
+        :plural="matchesAll"
         :disabled="disabled"
     />
     {% endblock %}
