--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-promotion-line-item/sw-condition-promotion-line-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-promotion-line-item/sw-condition-promotion-line-item.html.twig
@@ -3,6 +3,7 @@
     {% block sw_condition_promotion_line_item_field_operator %}
     <sw-condition-operator-select
         v-bind="{ operators, condition }"
+        :plural="matchesAll"
         :disabled="disabled"
     />
     {% endblock %}
