NEXT-20977 - Move to CSS vars

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.html.twig
@@ -98,11 +98,11 @@
         v-else-if="buttonConfig.type === 'link' && buttonConfig.expanded"
         ref="flyoutLinkMenu"
         class="sw-text-editor-toolbar-button__children"
-        :style="dynamicPositionStyle"
     >
         <sw-text-editor-link-menu
             :button-config="buttonConfig"
             @button-click="handleButtonClick"
+            @mounted="positionLinkMenu"
         />
     </div>
     {% endblock %}
