--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor-toolbar-button/sw-text-editor-toolbar-button.scss
@@ -43,7 +43,7 @@ $sw-text-editor-toolbar-button-arrow-shadow: rgba(120, 138, 155, 0.5);
     border-radius: 4px;
     flex-direction: column;
     position: absolute;
-    left: 0;
+    left: var(--flyoutLinkLeftOffset, 0);
     top: calc(100% + 6px);
     white-space: nowrap;
     border: 1px solid $color-gray-300;
