NEXT-19742 - Fix e2e tests

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -133,6 +133,7 @@
                 :condition-repository="conditionRepository"
                 :is-loading="isLoading"
                 @conditions-changed="conditionsChanged"
+                @tree-finished-loading="setTreeFinishedLoading"
             />
             {% endblock %}
         </sw-card-view>
