--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-base/sw-settings-rule-detail-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-base/sw-settings-rule-detail-base.html.twig
@@ -105,6 +105,7 @@
             :root-condition="null"
             :disabled="!acl.can('rule.editor')"
             @conditions-changed="onConditionsChanged"
+            @initial-loading-done="$emit('tree-finished-loading')"
         />
     </sw-card>
     {% endblock %}
