--- a/src/Administration/Resources/app/administration/src/module/sw-dashboard/component/sw-dashboard-statistics/sw-dashboard-statistics.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-dashboard/component/sw-dashboard-statistics/sw-dashboard-statistics.scss
@@ -49,4 +49,12 @@ $content-max-width: 960px;
             }
         }
     }
+
+    &__title {
+        font-weight: $font-weight-semi-bold;
+    }
+
+    &__help-text {
+        margin-left: 8px;
+    }
 }
