--- a/src/Administration/Resources/app/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-dashboard/page/sw-dashboard-index/sw-dashboard-index.scss
@@ -43,6 +43,14 @@ $content-max-width: 960px;
         }
     }
 
+    &__title {
+        font-weight: $font-weight-semi-bold;
+    }
+
+    &__help-text {
+        margin-left: 8px;
+    }
+
     &__card-grid {
         max-width: $content-max-width;
         margin: 32px auto;
