NEXT-20935 - Add skeleton for new payment method overview

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -68,16 +68,18 @@
             {% endblock %}
 
             {% block sw_modal_body %}
-            <div class="sw-modal__body">
-                {% block sw_modal_loader %}
-                <slot name="modal-loader">
-                    <sw-loader v-if="isLoading" />
-                </slot>
-                {% endblock %}
-                <slot>
-                    {% block sw_modal_slot_default %}{% endblock %}
-                </slot>
-            </div>
+            <slot name="body">
+                <div class="sw-modal__body">
+                    {% block sw_modal_loader %}
+                    <slot name="modal-loader">
+                        <sw-loader v-if="isLoading" />
+                    </slot>
+                    {% endblock %}
+                    <slot>
+                        {% block sw_modal_slot_default %}{% endblock %}
+                    </slot>
+                </div>
+            </slot>
             {% endblock %}
 
             {% block sw_modal_footer %}
