--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.scss
@@ -11,4 +11,20 @@ $sw-payment-list-color-success: $color-emerald-500;
     .is--active {
         color: $sw-payment-list-color-success;
     }
+
+    &__deprecated-alert.sw-alert {
+        width: 720px;
+        position: absolute;
+        bottom: 40px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        z-index: $z-index-notifications;
+
+        .sw-alert__message {
+            margin-top: 4px;
+            font-size: $font-size-small;
+            color: $color-darkgray-200;
+        }
+    }
 }
