NEXT-20229 - Correct display payment status in order listing

--- a/src/Administration/Resources/app/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -164,7 +164,7 @@
                         :variant="getVariantFromPaymentState(item)"
                         appearance="pill"
                     >
-                        {{ item.transactions.last().stateMachineState.translated.name }}
+                        {{ transaction(item).stateMachineState.translated.name }}
                     </sw-label>
 
                     <div
@@ -177,7 +177,7 @@
                             rounded
                         />
 
-                        {{ item.transactions.last().stateMachineState.translated.name }}
+                        {{ transaction(item).stateMachineState.translated.name }}
                     </div>
                 </template>
                 {% endblock %}
