--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -42,105 +42,109 @@
             {% block sw_media_field_media_icon %}
             <sw-icon name="default-object-image" />
             {% endblock %}
+
+            {% block sw_media_field_media_popover %}
+            <sw-popover
+                v-if="showPicker"
+                :z-index="1100"
+                popover-class="sw-media-field__expanded-content"
+                class="sw-media-field__popover"
+            >
+                {% block sw_media_field_action_bar %}
+                <div class="sw-media-field__actions_bar">
+                    {% block sw_media_field_action_bar_button_toggle %}
+                    <sw-button
+                        class="sw-media-field__action-button"
+                        @click="toggleUploadField"
+                    >
+                        <sw-icon
+                            class="sw-media-field__icon-add"
+                            name="default-basic-plus-line"
+                            small
+                        />
+                        {{ toggleButtonLabel }}
+                    </sw-button>
+                    {% endblock %}
+
+                    {% block sw_media_field_action_bar_button_unlink %}
+                    <sw-button
+                        v-if="mediaId"
+                        class="sw-media-field__action-button is--remove"
+                        @click="removeLink"
+                    >
+                        <sw-icon
+                            class="sw-media-field__icon-remove"
+                            name="small-default-x-circle"
+                            small
+                        />
+                        {{ $tc('global.sw-media-field.labelUnlink') }}
+                    </sw-button>
+                    {% endblock %}
+                </div>
+                {% endblock %}
+
+                {% block sw_media_field_upload_component %}
+                <sw-upload-listener
+                    :upload-tag="uploadTag"
+                    auto-upload
+                    @media-upload-finish="exposeNewId"
+                />
+                <sw-media-upload-v2
+                    v-if="showUploadField"
+                    variant="regular"
+                    :allow-multi-select="false"
+                    :upload-tag="uploadTag"
+                    :disabled="disabled"
+                />
+                {% endblock %}
+
+                <div
+                    v-else
+                    class="sw-media-field__media-selection"
+                >
+                    {% block sw_media_field_search_field %}
+                    <sw-simple-search-field
+                        v-model="searchTerm"
+                        @search-term-change="onSearchTermChange"
+                    />
+                    {% endblock %}
+
+                    {% block sw_media_field_media_list %}
+                    <sw-loader
+                        v-if="isLoadingSuggestions"
+                        class="sw-media-field__picker-loader"
+                    />
+
+                    <ul
+                        v-else
+                        class="sw-media-field__suggestion-list"
+                    >
+                        <li
+                            v-for="suggestion in suggestedItems"
+                            :key="suggestion.id"
+                            class="sw-media-field__suggestion-list-entry"
+                        >
+                            {% block sw_media_field_suggestion_preview %}
+                            <sw-media-media-item
+                                class="sw-media-field__media-list-item"
+                                :item="suggestion"
+                                :is-list="true"
+                                :show-context-menu-button="false"
+                                @media-item-click="mediaItemChanged(suggestion.id)"
+                            />
+                            {% endblock %}
+                        </li>
+                    </ul>
+                    {% endblock %}
+                </div>
+            </sw-popover>
+            {% endblock %}
         </sw-button>
         {% endblock %}
     </div>
     {% endblock %}
 
-    {% block sw_media_field_media_picker %}
-    <div
-        v-if="showPicker"
-        class="sw-media-field__expanded-content"
-        :style="pickerClasses"
-    >
-        {% block sw_media_field_action_bar %}
-        <div class="sw-media-field__actions_bar">
-            {% block sw_media_field_action_bar_button_toggle %}
-            <sw-button
-                class="sw-media-field__action-button"
-                @click="toggleUploadField"
-            >
-                <sw-icon
-                    class="sw-media-field__icon-add"
-                    name="default-basic-plus-line"
-                    small
-                />
-                {{ toggleButtonLabel }}
-            </sw-button>
-            {% endblock %}
-
-            {% block sw_media_field_action_bar_button_unlink %}
-            <sw-button
-                v-if="mediaId"
-                class="sw-media-field__action-button is--remove"
-                @click="removeLink"
-            >
-                <sw-icon
-                    class="sw-media-field__icon-remove"
-                    name="small-default-x-circle"
-                    small
-                />
-                {{ $tc('global.sw-media-field.labelUnlink') }}
-            </sw-button>
-            {% endblock %}
-        </div>
-        {% endblock %}
-
-        {% block sw_media_field_upload_component %}
-        <sw-upload-listener
-            :upload-tag="uploadTag"
-            auto-upload
-            @media-upload-finish="exposeNewId"
-        />
-        <sw-media-upload-v2
-            v-if="showUploadField"
-            variant="regular"
-            :allow-multi-select="false"
-            :upload-tag="uploadTag"
-            :disabled="disabled"
-        />
-        {% endblock %}
-
-        <div
-            v-else
-            class="sw-media-field__media-selection"
-        >
-            {% block sw_media_field_search_field %}
-            <sw-simple-search-field
-                v-model="searchTerm"
-                @search-term-change="onSearchTermChange"
-            />
-            {% endblock %}
-
-            {% block sw_media_field_media_list %}
-            <sw-loader
-                v-if="isLoadingSuggestions"
-                class="sw-media-field__picker-loader"
-            />
-
-            <ul
-                v-else
-                class="sw-media-field__suggestion-list"
-            >
-                <li
-                    v-for="suggestion in suggestedItems"
-                    :key="suggestion.id"
-                    class="sw-media-field__suggestion-list-entry"
-                >
-                    {% block sw_media_field_suggestion_preview %}
-                    <sw-media-media-item
-                        class="sw-media-field__media-list-item"
-                        :item="suggestion"
-                        :is-list="true"
-                        :show-context-menu-button="false"
-                        @media-item-click="mediaItemChanged(suggestion.id)"
-                    />
-                    {% endblock %}
-                </li>
-            </ul>
-            {% endblock %}
-        </div>
-    </div>
-    {% endblock %}
+    {# @major-deprecated tag:v6.5.0 - block will be removed #}
+    {% block sw_media_field_media_picker %}{% endblock %}
 </div>
 {% endblock %}
