--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-field/sw-media-field.scss
@@ -63,45 +63,51 @@ $sw-media-field-color-unlink: $color-crimson-500;
         background: $transparent-background-url;
     }
 
-    .sw-media-field__expanded-content {
+    &__popover {
         position: absolute;
-        right: 0;
-        padding: 30px;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.sw-media-field__expanded-content {
+    width: 380px;
+    padding: 30px;
+    background-color: $sw-media-field-background-color-picker;
+    border: 1px solid $sw-media-field-border-color-picker;
+    border-radius: $sw-media-field-border-radius-picker;
+    transform: translate(calc(-100% + 45px), 6px);
+
+    .sw-simple-search-field {
+        margin-bottom: 8px;
+    }
+
+    .sw-media-field__suggestion-list {
+        list-style: none;
+
+        > .sw-media-field__suggestion-list-entry:hover {
+            cursor: pointer;
+            background: $sw-media-field-background-color-list-item-hover;
+        }
+    }
+
+    .sw-loader__container {
+        transform: translate(-50%, 0%);
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: -5px;
+        right: 20px;
+        height: 8px;
+        width: 8px;
+        transform: rotate(45deg);
+        background: $color-white;
+        border-top: 1px solid $sw-media-field-border-color-picker;
+        border-left: 1px solid $sw-media-field-border-color-picker;
         z-index: $z-index-context-menu;
-        background-color: $sw-media-field-background-color-picker;
-        border: 1px solid $sw-media-field-border-color-picker;
-        border-radius: $sw-media-field-border-radius-picker;
-
-        .sw-simple-search-field {
-            margin-bottom: 8px;
-        }
-
-        .sw-media-field__suggestion-list {
-            list-style: none;
-
-            > .sw-media-field__suggestion-list-entry:hover {
-                cursor: pointer;
-                background: $sw-media-field-background-color-list-item-hover;
-            }
-        }
-
-        .sw-loader__container {
-            transform: translate(-50%, 0%);
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: -5px;
-            right: 20px;
-            height: 8px;
-            width: 8px;
-            transform: rotate(45deg);
-            background: $color-white;
-            border-top: 1px solid $sw-media-field-border-color-picker;
-            border-left: 1px solid $sw-media-field-border-color-picker;
-            z-index: $z-index-context-menu;
-        }
     }
 
     .sw-media-field__actions_bar {
@@ -134,5 +140,15 @@ $sw-media-field-color-unlink: $color-crimson-500;
 
     .sw-media-field__picker-loader {
         position: static;
+    }
+}
+
+.sw-popover__wrapper.sw-media-field__expanded-content.--placement-bottom-outside {
+    transform: translate(calc(-100% + 45px), calc(-100% - 50px));
+
+    &::before {
+        top: auto;
+        bottom: -5px;
+        transform: rotate(225deg);
     }
 }
