--- a/src/Storefront/Resources/app/administration/src/modules/sw-theme-manager/page/sw-theme-manager-detail/sw-theme-manager-detail.html.twig
+++ b/src/Storefront/Resources/app/administration/src/modules/sw-theme-manager/page/sw-theme-manager-detail/sw-theme-manager-detail.html.twig
@@ -257,6 +257,8 @@
                                                                                 :inherited-value="baseThemeConfig[fieldName].value"
                                                                                 :label="!field.label ? '' : field.label"
                                                                                 :customInheritationCheckFunction="checkInheritance"
+                                                                                :customContext="{ fieldName }"
+                                                                                @input="handleInheritanceInput($event, fieldName)"
                                                                         >
                                                                             <template #content="{ currentValue, updateCurrentValue, isInherited }">
                                                                                 <sw-field
@@ -282,6 +284,8 @@
                                                                                 :inherited-value="baseThemeConfig[fieldName].value"
                                                                                 :label="!field.label ? '' : field.label"
                                                                                 :customInheritationCheckFunction="checkInheritance"
+                                                                                :customContext="{ fieldName }"
+                                                                                @input="handleInheritanceInput($event, fieldName)"
                                                                         >
                                                                             <template #content="{ currentValue, updateCurrentValue, isInherited }">
                                                                                 <sw-field
@@ -310,6 +314,9 @@
                                                                                 :has-parent="theme.baseConfig?.fields?.[fieldName] == null"
                                                                                 :inherited-value="baseThemeConfig[fieldName].value"
                                                                                 :label="!field.label ? '' : field.label"
+                                                                                :customInheritationCheckFunction="checkInheritance"
+                                                                                :customContext="{ fieldName }"
+                                                                                @input="handleInheritanceInput($event, fieldName)"
                                                                         >
                                                                                 <template #content="{ currentValue, updateCurrentValue, isInherited, removeInheritance }">
                                                                                     <sw-media-upload-v2
@@ -337,6 +344,8 @@
                                                                             :inherited-value="baseThemeConfig[fieldName].value"
                                                                             :label="!field.label ? '' : field.label"
                                                                             :customInheritationCheckFunction="checkInheritance"
+                                                                            :customContext="{ fieldName }"
+                                                                            @input="handleInheritanceInput($event, fieldName)"
                                                                         >
                                                                             <template #content="{ currentValue, updateCurrentValue, isInherited }">
                                                                                 <sw-field
@@ -361,6 +370,8 @@
                                                                                 :inherited-value="baseThemeConfig[fieldName].value"
                                                                                 :label="!field.label ? '' : field.label"
                                                                                 :customInheritationCheckFunction="checkInheritance"
+                                                                                :customContext="{ fieldName }"
+                                                                                @input="handleInheritanceInput($event, fieldName)"
                                                                         >
                                                                             <template #content="{ currentValue, updateCurrentValue, isInherited }">
                                                                                 <sw-form-field-renderer
