NEXT-19403 - Preview entity does nothing on listing page layouts

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
@@ -70,6 +70,7 @@
                 {% endblock %}
 
                 {% block sw_cms_sidebar_page_settings_demo_field %}
+                {# @deprecated tag:v6.5.0 - ref cmsDemoSelection will be removed #}
                 <sw-entity-single-select
                     v-if="demoEntity !== null"
                     ref="cmsDemoSelection"
