--- a/src/Administration/Resources/app/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.html.twig
@@ -5,7 +5,7 @@
         <sw-cms-el-product-box
             v-for="index in demoProductCount"
             :key="index"
-            :element="demoProductElement"
+            :element="getProduct(index)"
         />
     </div>
 
