NEXT-17708 - Rework document service

--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-order/sw-bulk-edit-order-documents-generate-delivery-note/sw-bulk-edit-order-documents-generate-delivery-note.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-order/sw-bulk-edit-order-documents-generate-delivery-note/sw-bulk-edit-order-documents-generate-delivery-note.html.twig
@@ -1,11 +1,11 @@
 {% block sw_bulk_edit_order_documents_generate_invoice_datepicker %}
 <sw-datepicker
-    v-model="generateData.documentDate"
+    v-model="generateData.custom.deliveryDate"
     class="sw-bulk-edit-order-documents-generate-invoice__item"
     :label="$tc('sw-bulk-edit.order.documents.generateInvoice.labelDatePicker')"
 />
 <sw-datepicker
-    v-model="generateData.documentDeliveryDate"
+    v-model="generateData.custom.deliveryNoteDate"
     class="sw-bulk-edit-order-documents-generate-invoice__item"
     :label="$tc('sw-bulk-edit.order.documents.generateDeliveryNote.labelDeliveryDatePicker')"
 />
