--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal/sw-bulk-edit-save-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal/sw-bulk-edit-save-modal.scss
@@ -13,6 +13,7 @@
     &__help-text {
         font-size: $font-size-small;
         padding-bottom: 20px;
+        text-align: center;
     }
 
     &-success,
