--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-success/sw-bulk-edit-save-modal-success.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-save-modal-success/sw-bulk-edit-save-modal-success.scss
@@ -2,16 +2,47 @@
 
 .sw-bulk-edit-save-modal-success {
     &__download-order-documents {
-        cursor: pointer;
-        color: $color-shopware-brand-500;
-        font-size: $font-size-small;
-        font-weight: $font-weight-semi-bold;
-        text-decoration: underline;
+        width: 100%;
+        margin: 24px 0;
     }
 
-    &__download-order-documents.is--disabled {
-        cursor: default;
-        pointer-events: none;
-        opacity: 0.5;
+    &__download-order-document {
+        display: flex;
+        align-items: flex-end;
+        list-style: none;
+
+        &:not(:first-child) {
+            margin-top: 24px;
+        }
+    }
+
+    &__download-order-document .progress {
+        flex-grow: 1;
+        margin-right: 24px;
+
+        &__label {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            font-size: $font-size-small;
+        }
+
+        &__bar {
+            position: relative;
+            width: 100%;
+            height: 8px;
+            background-color: $color-gray-100;
+            border-radius: $border-radius-pill;
+        }
+
+        &__bar-fill {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            background-color: $color-emerald-500;
+            border-radius: $border-radius-pill;
+            transition: width 0.15s ease-in-out;
+        }
     }
 }
