NEXT-19668 - Change customer status dropdown text highlighting

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-status-modal/sw-flow-change-customer-status-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-change-customer-status-modal/sw-flow-change-customer-status-modal.html.twig
@@ -9,6 +9,7 @@
     <sw-single-select
         v-model="active"
         required
+        :highlight-search-term="false"
         class="sw-flow-change-customer-status-modal__type-select"
         :options="options"
         :label="$tc('sw-flow.modals.customerStatus.labelCustomerStatus')"
