NEXT-21305 - Fix administration safari

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
@@ -1,6 +1,17 @@
 @import "~scss/mixins";
 @import "~scss/variables";
 
+/**
+ * @hotfix fixes a bug in safari which leads to disappearing cards
+ */
+@media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance:none) {
+        .sw-card {
+            transform: translateZ(0);
+        }
+    }
+}
+
 .sw-card {
     max-width: $content-width;
     margin: 0 auto 40px auto;
