NEXT-21546 - Added type "discard" to sw-confirm-modal

--- a/src/Administration/Resources/app/administration/src/app/component/modal/sw-confirm-modal/sw-confirm-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/modal/sw-confirm-modal/sw-confirm-modal.html.twig
@@ -35,7 +35,7 @@
         {% block sw_confirm_modal_footer_confirm %}
         <sw-button
             class="sw-confirm-modal__button-confirm"
-            :variant="type === 'delete' ? 'danger' : 'primary'"
+            :variant="type === 'delete' || 'discard' ? 'danger' : 'primary'"
             size="small"
             @click="$emit('confirm')"
         >
