--- a/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/component/sw-promotion-v2-rule-select/sw-promotion-v2-rule-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/component/sw-promotion-v2-rule-select/sw-promotion-v2-rule-select.html.twig
@@ -31,9 +31,9 @@
             #result-item="{ item, index, labelProperty, valueProperty, searchTerm, highlightSearchTerm, isSelected, addItem, getKey }"
         >
             <sw-select-result
-                v-tooltip="tooltipConfig(item.id)"
+                v-tooltip="tooltipConfig(item)"
                 :selected="isSelected(item)"
-                :disabled="restrictedRules.includes(item.id)"
+                :disabled="isRuleRestricted(item)"
                 v-bind="{ item, index }"
                 @item-select="addItem"
             >
