--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -132,6 +132,7 @@
                 :conditions="conditions"
                 :condition-repository="conditionRepository"
                 :is-loading="isLoading"
+                :detail-page-loading="isLoading"
                 @conditions-changed="conditionsChanged"
                 @tree-finished-loading="setTreeFinishedLoading"
             />
