--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-assignments/sw-settings-rule-detail-assignments.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-assignments/sw-settings-rule-detail-assignments.html.twig
@@ -20,6 +20,7 @@
                     {% block sw_settings_rule_detail_assignments_add_button %}
                     <sw-button
                         v-if="entity.allowAdd"
+                        v-tooltip="getTooltipConfig(entity)"
                         :disabled="disableAdd(entity) || !acl.can('rule.editor')"
                         variant="ghost"
                         size="small"
