--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-base/sw-settings-rule-detail-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/view/sw-settings-rule-detail-base/sw-settings-rule-detail-base.html.twig
@@ -102,6 +102,7 @@
             :condition-data-provider-service="ruleConditionDataProviderService"
             association-field="ruleId"
             :association-value="rule.id"
+            :association-entity="rule"
             :root-condition="null"
             :disabled="!acl.can('rule.editor')"
             @conditions-changed="onConditionsChanged"
