--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.html.twig
@@ -149,7 +149,9 @@
                     class="sw-order-line-items-grid__item-payload-options"
                 >
                     <sw-product-variant-info :variations="item.payload.options">
-                        <div class="sw-order-line-items-grid__item-label">{{ item.label }}</div>
+                        <div class="sw-order-line-items-grid__item-label">
+                            {{ item.label }}
+                        </div>
                     </sw-product-variant-info>
                 </div>
                 {% endblock %}
