NEXT-20556 - Fix visibility rule condition in dpg

--- a/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-value/sw-product-stream-value.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-value/sw-product-stream-value.html.twig
@@ -261,7 +261,7 @@
 
             {% block sw_product_stream_value_entity_multi_value_visibilities %}
             <sw-entity-multi-id-select
-                v-else-if="definition.entity === 'product_visibility' && actualCondition.type === 'equalsAny'"
+                v-else-if="definition.entity === 'product_visibility' && (actualCondition.type === 'equalsAny' || actualCondition.type === 'equalsAll')"
                 v-model="multiValue"
                 size="medium"
                 :repository="repository"
